--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     function getFromLocalStorage(name) {
       return JSON.parse(localStorage.getItem(name) || 'null')
     }
+
     function tag(tagName) {
       return document.createElement(tagName)
     }
@@ -42,6 +43,7 @@
       span.className = "text"
       return span
     }
+
     function createButton(id) {
       var button = tag('button')
       button.textContent = '编辑'
@@ -52,7 +54,7 @@
         var img2 = button2.previousSibling
         var key = button2['id'] // q w e r t
         var x = prompt('给我一个网址') // qq.com
-        hash[key] = x  // hash 变更
+        hash[key] = x // hash 变更
         img2.src = 'http://' + x + '/favicon.ico'
         img2.onerror = function (tihuan) {
           tihuan.target.src = '//i.loli.net/2017/11/10/5a05afbc5e183.png'
@@ -61,6 +63,7 @@
       }
       return button
     }
+
     function createImage(domain) {
       var img = tag('img')
       if (domain) {
@@ -73,15 +76,62 @@
       }
       return img
     }
+
     function init() {
       var keys = {
-        '0': { 0: 'q', 1: 'w', 2: 'e', 3: 'r', 4: 't', 5: 'y', 6: 'u', 7: 'i', 8: 'o', 9: 'p', length: 10 },
-        '1': { 0: 'a', 1: 's', 2: 'd', 3: 'f', 4: 'g', 5: 'h', 6: 'j', 7: 'k', 8: 'l', length: 9 },
-        '2': { 0: 'z', 1: 'x', 2: 'c', 3: 'v', 4: 'b', 5: 'n', 6: 'm', length: 7 },
+        '0': {
+          0: 'q',
+          1: 'w',
+          2: 'e',
+          3: 'r',
+          4: 't',
+          5: 'y',
+          6: 'u',
+          7: 'i',
+          8: 'o',
+          9: 'p',
+          length: 10
+        },
+        '1': {
+          0: 'a',
+          1: 's',
+          2: 'd',
+          3: 'f',
+          4: 'g',
+          5: 'h',
+          6: 'j',
+          7: 'k',
+          8: 'l',
+          length: 9
+        },
+        '2': {
+          0: 'z',
+          1: 'x',
+          2: 'c',
+          3: 'v',
+          4: 'b',
+          5: 'n',
+          6: 'm',
+          length: 7
+        },
         'length': 3
       }
       var hash = {
-        'q': 'qq.com', 'w': 'weibo.com', 'e': 'ele.me', 'r': 'sns.renren.com', 't': 'tianya.cn', 'y': 'youdao.com', 'u': 'uc.cn', 'i': 'iqiyi.com', 'o': 'opera.com', 'p': undefined, 'a': 'acfun.cn', 's': 'sohu.com', 'd': 'douyu.com', 'z': 'zhihu.com', 'm': 'meituan.com'
+        'b': 'bilibili.com',
+        'w': 'weibo.com',
+        'e': 'ele.me',
+        'r': 'sns.renren.com',
+        't': 'tianya.cn',
+        'y': 'youdao.com',
+        'u': 'uc.cn',
+        'i': 'iqiyi.com',
+        'o': 'opera.com',
+        'p': undefined,
+        'a': 'acfun.cn',
+        's': 'sohu.com',
+        'd': 'douyu.com',
+        'z': 'zhihu.com',
+        'm': 'meituan.com'
       }
       // 取出 localStorage 中的 jianzhi 对应的 hash
       var hashInLocalStorage = getFromLocalStorage('jianzhi')
@@ -93,12 +143,13 @@
         "hash": hash
       }
     }
+
     function generateKeyboard(keys, hash) {
       for (var index = 0; index < keys['length']; index = index + 1) {
         var div = tag('div')
         div.className = 'row'
         main.appendChild(div)
-        var row = keys[index]  // 第一个数组  第二个数组  第三个数组
+        var row = keys[index] // 第一个数组  第二个数组  第三个数组
         for (var index2 = 0; index2 < row['length']; index2 = index2 + 1) {
           var span = createSpan(row[index2])
           var button = createButton(row[index2])
@@ -112,6 +163,7 @@
         }
       }
     }
+
     function listenToUser(hash) {
       document.onkeypress = function (bianjizhi) {
         var key = bianjizhi['key'] // q w e
